objects/ManuClub_Client_Profile__c/ManuClub_Client_Profile__c.object-meta.xml
<CustomObject>
    <label>ManuClub_Client_Profile</label>
    <nameField>
        <label>ManuClub_Client_Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ManuClub_Client_Profile</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>