objects/ManuClub_Client_Profile__c/fields/Avatar__c.field-meta.xml
<CustomField>
    <fullName>Avatar__c</fullName>
    <label>Avatar</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>