objects/ManuClub_Client_Profile__c/fields/Club_ID__c.field-meta.xml
<CustomField>
    <fullName>Club_ID__c</fullName>
    <externalId>true</externalId>
    <label>Club_ID</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>