objects/ManuClub_Client_Profile__c/fields/Device_Language__c.field-meta.xml
<CustomField>
    <fullName>Device_Language__c</fullName>
    <label>Device_Language</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>