objects/ManuClub_Client_Profile__c/fields/Facebook_ID__c.field-meta.xml
<CustomField>
    <fullName>Facebook_ID__c</fullName>
    <label>Facebook_ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>