objects/ManuClub_Client_Profile__c/fields/First_Sync_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Sync_Date__c</fullName>
    <label>First_Sync_Date</label>
    <type>DateTime</type>
</CustomField>