objects/ManuClub_Client_Profile__c/fields/Last_API_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_API_Call_Date__c</fullName>
    <description>A JSON String to store each last API call for each API</description>
    <label>Last API Call Date</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>