objects/ManuClub_Client_Profile__c/fields/Reminder__c.field-meta.xml
<CustomField>
    <fullName>Reminder__c</fullName>
    <label>Reminder</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>fitbit_reauth</fullName>
                <default>true</default>
                <label>fitbit_reauth</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>