objects/ManuClub_Client_Profile__c/fields/Saleforce_ID__c.field-meta.xml
<CustomField>
    <fullName>Saleforce_ID__c</fullName>
    <formula>CASESAFEID(Owner:User.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saleforce_ID</label>
    <type>Text</type>
</CustomField>