objects/ManuClub_Client_Profile__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <formula>Owner:User.Username</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Username</label>
    <type>Text</type>
</CustomField>